<resources>
    <string name="app_name">ShoeStore</string>

    <!--  Login  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">Please enter your email</string>
    <string name="password_hint">Please enter your password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>

    <!--  Welcome  -->
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Welcome to Shop Store!</string>
    <string name="get_started">Get Started</string>

    <!--  Instructions  -->
    <string name="instructions">Instructions</string>
    <string name="save_instruction">Click the `Save` button to add a new shoe to the shoe list.</string>
    <string name="cancel_instruction">Click the `Cancel` button to return to the shoe list.</string>
    <string name="checkout_shoes">Check out the shoes</string>

    <!--  Shoe List  -->
    <string name="shoes">Shoes</string>
    <string name="floating_button_content_desc">Add a shoe</string>
    <string name="log_out">Log Out</string>

    <!--  Shoe Detail  -->
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_name_hint">Please enter the shoe name</string>
    <string name="company">Company</string>
    <string name="company_hint">Please enter the company name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_size_hint">Please enter the size</string>
    <string name="description">Description</string>
    <string name="description_hint">Please enter the description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
